[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Maze2D/ShiftingMaze.gd" type="Script" id=1]
[ext_resource path="res://scenes/2d/collision grid/navigation_grid_2d.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/2d/collision grid/solid_grid_2d.tscn" type="PackedScene" id=3]
[ext_resource path="res://tiles/shifting maze tiles/ShiftingMazeTileset.tres" type="TileSet" id=5]
[ext_resource path="res://tiles/shifting maze tiles/ShiftingMazeFloorTileset.tres" type="TileSet" id=6]

[node name="maze_2d" type="Node2D"]
script = ExtResource( 1 )
autotile_tile_index = 2

[node name="floor" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0 )

[node name="walls" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 0, 1, 131078, 1, 1, 196617, 2, 1, 196617, 3, 1, 196617, 4, 1, 196617, 5, 1, 196617, 6, 1, 196618, 7, 1, 196617, 8, 1, 196617, 9, 1, 196617, 10, 1, 196617, 11, 1, 196617, 12, 1, 196617, 13, 1, 196617, 14, 1, 196617, 15, 1, 196617, 16, 1, 196617, 17, 1, 196617, 18, 1, 196618, 19, 1, 196617, 20, 1, 131077, 65536, 1, 131083, 65537, 1, 65546, 65538, 1, 65546, 65539, 1, 65546, 65540, 1, 65546, 65541, 1, 65546, 65542, 1, 65536, 65543, 1, 65546, 65544, 1, 65546, 65545, 1, 65546, 65546, 1, 65546, 65547, 1, 65546, 65548, 1, 65546, 65549, 1, 65546, 65550, 1, 65546, 65551, 1, 65546, 65552, 1, 65546, 65553, 1, 65546, 65554, 1, 65536, 65555, 1, 65546, 65556, 1, 65544, 131072, 1, 131083, 131073, 1, 65546, 131074, 1, 196609, 131075, 1, 196610, 131076, 1, 3, 131077, 1, 65546, 131078, 1, 131073, 131079, 1, 196610, 131080, 1, 3, 131081, 1, 65546, 131082, 1, 1, 131083, 1, 196610, 131084, 1, 196610, 131085, 1, 196610, 131086, 1, 196611, 131087, 1, 65546, 131088, 1, 0, 131089, 1, 65546, 131090, 1, 131072, 131091, 1, 65546, 131092, 1, 65544, 196608, 1, 131083, 196609, 1, 65546, 196610, 1, 65546, 196611, 1, 65546, 196612, 1, 65536, 196613, 1, 65546, 196614, 1, 65546, 196615, 1, 65546, 196616, 1, 65536, 196617, 1, 65546, 196618, 1, 65536, 196619, 1, 65546, 196620, 1, 65546, 196621, 1, 65546, 196622, 1, 65546, 196623, 1, 65546, 196624, 1, 65536, 196625, 1, 65546, 196626, 1, 65546, 196627, 1, 65546, 196628, 1, 65544, 262144, 1, 65547, 262145, 1, 196610, 262146, 1, 3, 262147, 1, 65546, 262148, 1, 65537, 262149, 1, 196610, 262150, 1, 3, 262151, 1, 65546, 262152, 1, 131073, 262153, 1, 196610, 262154, 1, 65539, 262155, 1, 65546, 262156, 1, 1, 262157, 1, 196610, 262158, 1, 196610, 262159, 1, 196610, 262160, 1, 131074, 262161, 1, 196610, 262162, 1, 3, 262163, 1, 65546, 262164, 1, 65544, 327680, 1, 131083, 327681, 1, 65546, 327682, 1, 65536, 327683, 1, 65546, 327684, 1, 65536, 327685, 1, 65546, 327686, 1, 65536, 327687, 1, 65546, 327688, 1, 65546, 327689, 1, 65546, 327690, 1, 65536, 327691, 1, 65546, 327692, 1, 65536, 327693, 1, 65546, 327694, 1, 65546, 327695, 1, 65546, 327696, 1, 65546, 327697, 1, 65546, 327698, 1, 65536, 327699, 1, 65546, 327700, 1, 65544, 393216, 1, 131083, 393217, 1, 65546, 393218, 1, 131072, 393219, 1, 65546, 393220, 1, 131072, 393221, 1, 65546, 393222, 1, 65537, 393223, 1, 196610, 393224, 1, 196611, 393225, 1, 65546, 393226, 1, 65536, 393227, 1, 65546, 393228, 1, 131072, 393229, 1, 65546, 393230, 1, 196609, 393231, 1, 196610, 393232, 1, 3, 393233, 1, 65546, 393234, 1, 65536, 393235, 1, 65546, 393236, 1, 65544, 458752, 1, 131083, 458753, 1, 65546, 458754, 1, 65546, 458755, 1, 65546, 458756, 1, 65546, 458757, 1, 65546, 458758, 1, 65536, 458759, 1, 65546, 458760, 1, 65546, 458761, 1, 65546, 458762, 1, 65536, 458763, 1, 65546, 458764, 1, 65546, 458765, 1, 65546, 458766, 1, 65546, 458767, 1, 65546, 458768, 1, 65536, 458769, 1, 65546, 458770, 1, 65536, 458771, 1, 65546, 458772, 1, 65544, 524288, 1, 131083, 524289, 1, 65546, 524290, 1, 1, 524291, 1, 196610, 524292, 1, 196610, 524293, 1, 196610, 524294, 1, 131075, 524295, 1, 65546, 524296, 1, 1, 524297, 1, 196610, 524298, 1, 131074, 524299, 1, 196610, 524300, 1, 196610, 524301, 1, 196610, 524302, 1, 196610, 524303, 1, 196610, 524304, 1, 65539, 524305, 1, 65546, 524306, 1, 131072, 524307, 1, 65546, 524308, 1, 65544, 589824, 1, 131083, 589825, 1, 65546, 589826, 1, 65536, 589827, 1, 65546, 589828, 1, 65546, 589829, 1, 65546, 589830, 1, 65546, 589831, 1, 65546, 589832, 1, 65536, 589833, 1, 65546, 589834, 1, 65546, 589835, 1, 65546, 589836, 1, 65546, 589837, 1, 65546, 589838, 1, 65546, 589839, 1, 65546, 589840, 1, 65536, 589841, 1, 65546, 589842, 1, 65546, 589843, 1, 65546, 589844, 1, 65544, 655360, 1, 131083, 655361, 1, 65546, 655362, 1, 65536, 655363, 1, 65546, 655364, 1, 196609, 655365, 1, 196610, 655366, 1, 3, 655367, 1, 65546, 655368, 1, 65536, 655369, 1, 65546, 655370, 1, 1, 655371, 1, 196610, 655372, 1, 196610, 655373, 1, 196610, 655374, 1, 196611, 655375, 1, 65546, 655376, 1, 65536, 655377, 1, 65546, 655378, 1, 0, 655379, 1, 65546, 655380, 1, 65544, 720896, 1, 131083, 720897, 1, 65546, 720898, 1, 65536, 720899, 1, 65546, 720900, 1, 65546, 720901, 1, 65546, 720902, 1, 65536, 720903, 1, 65546, 720904, 1, 65536, 720905, 1, 65546, 720906, 1, 65536, 720907, 1, 65546, 720908, 1, 65546, 720909, 1, 65546, 720910, 1, 65546, 720911, 1, 65546, 720912, 1, 65536, 720913, 1, 65546, 720914, 1, 65536, 720915, 1, 65546, 720916, 1, 65544, 786432, 1, 131083, 786433, 1, 65546, 786434, 1, 131073, 786435, 1, 196610, 786436, 1, 3, 786437, 1, 65546, 786438, 1, 131073, 786439, 1, 196610, 786440, 1, 131075, 786441, 1, 65546, 786442, 1, 65536, 786443, 1, 65546, 786444, 1, 1, 786445, 1, 196610, 786446, 1, 196610, 786447, 1, 196610, 786448, 1, 131074, 786449, 1, 196610, 786450, 1, 131075, 786451, 1, 65546, 786452, 1, 65544, 851968, 1, 131083, 851969, 1, 65546, 851970, 1, 65546, 851971, 1, 65546, 851972, 1, 65536, 851973, 1, 65546, 851974, 1, 65546, 851975, 1, 65546, 851976, 1, 65546, 851977, 1, 65546, 851978, 1, 65536, 851979, 1, 65546, 851980, 1, 65536, 851981, 1, 65546, 851982, 1, 65546, 851983, 1, 65546, 851984, 1, 65546, 851985, 1, 65546, 851986, 1, 65546, 851987, 1, 65546, 851988, 1, 65544, 917504, 1, 65547, 917505, 1, 196610, 917506, 1, 3, 917507, 1, 65546, 917508, 1, 65537, 917509, 1, 196610, 917510, 1, 196610, 917511, 1, 196610, 917512, 1, 2, 917513, 1, 196610, 917514, 1, 65539, 917515, 1, 65546, 917516, 1, 65536, 917517, 1, 65546, 917518, 1, 196609, 917519, 1, 196610, 917520, 1, 2, 917521, 1, 196610, 917522, 1, 196611, 917523, 1, 65546, 917524, 1, 65544, 983040, 1, 131083, 983041, 1, 65546, 983042, 1, 65536, 983043, 1, 65546, 983044, 1, 65536, 983045, 1, 65546, 983046, 1, 65546, 983047, 1, 65546, 983048, 1, 65536, 983049, 1, 65546, 983050, 1, 65536, 983051, 1, 65546, 983052, 1, 65536, 983053, 1, 65546, 983054, 1, 65546, 983055, 1, 65546, 983056, 1, 65536, 983057, 1, 65546, 983058, 1, 65546, 983059, 1, 65546, 983060, 1, 65544, 1048576, 1, 131083, 1048577, 1, 65546, 1048578, 1, 131072, 1048579, 1, 65546, 1048580, 1, 65536, 1048581, 1, 65546, 1048582, 1, 0, 1048583, 1, 65546, 1048584, 1, 131072, 1048585, 1, 65546, 1048586, 1, 65536, 1048587, 1, 65546, 1048588, 1, 65536, 1048589, 1, 65546, 1048590, 1, 0, 1048591, 1, 65546, 1048592, 1, 131072, 1048593, 1, 65546, 1048594, 1, 0, 1048595, 1, 65546, 1048596, 1, 65544, 1114112, 1, 131083, 1114113, 1, 65546, 1114114, 1, 65546, 1114115, 1, 65546, 1114116, 1, 65536, 1114117, 1, 65546, 1114118, 1, 65536, 1114119, 1, 65546, 1114120, 1, 65546, 1114121, 1, 65546, 1114122, 1, 65536, 1114123, 1, 65546, 1114124, 1, 65536, 1114125, 1, 65546, 1114126, 1, 65536, 1114127, 1, 65546, 1114128, 1, 65546, 1114129, 1, 65546, 1114130, 1, 65536, 1114131, 1, 65546, 1114132, 1, 65544, 1179648, 1, 131083, 1179649, 1, 65546, 1179650, 1, 196609, 1179651, 1, 196610, 1179652, 1, 131075, 1179653, 1, 65546, 1179654, 1, 131073, 1179655, 1, 196610, 1179656, 1, 196611, 1179657, 1, 65546, 1179658, 1, 131073, 1179659, 1, 196610, 1179660, 1, 131074, 1179661, 1, 196610, 1179662, 1, 131074, 1179663, 1, 196610, 1179664, 1, 196610, 1179665, 1, 196610, 1179666, 1, 131075, 1179667, 1, 65546, 1179668, 1, 65544, 1245184, 1, 131083, 1245185, 1, 65546, 1245186, 1, 65546, 1245187, 1, 65546, 1245188, 1, 65546, 1245189, 1, 65546, 1245190, 1, 65546, 1245191, 1, 65546, 1245192, 1, 65546, 1245193, 1, 65546, 1245194, 1, 65546, 1245195, 1, 65546, 1245196, 1, 65546, 1245197, 1, 65546, 1245198, 1, 65546, 1245199, 1, 65546, 1245200, 1, 65546, 1245201, 1, 65546, 1245202, 1, 65546, 1245203, 1, 65546, 1245204, 1, 65544, 1310720, 1, 65542, 1310721, 1, 10, 1310722, 1, 10, 1310723, 1, 10, 1310724, 1, 10, 1310725, 1, 10, 1310726, 1, 10, 1310727, 1, 10, 1310728, 1, 10, 1310729, 1, 10, 1310730, 1, 10, 1310731, 1, 10, 1310732, 1, 10, 1310733, 1, 10, 1310734, 1, 10, 1310735, 1, 10, 1310736, 1, 10, 1310737, 1, 10, 1310738, 1, 10, 1310739, 1, 10, 1310740, 1, 65541 )

[node name="moving_floor" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 24, 24 )
format = 1

[node name="moving_walls" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 24, 24 )
format = 1

[node name="solids" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 65536, 0, 0, 65538, 0, 0, 65540, 0, 0, 65542, 0, 0, 65544, 0, 0, 65546, 0, 0, 65548, 0, 0, 65550, 0, 0, 65552, 0, 0, 65554, 0, 0, 65556, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131092, 0, 0, 196608, 0, 0, 196610, 0, 0, 196612, 0, 0, 196614, 0, 0, 196616, 0, 0, 196618, 0, 0, 196620, 0, 0, 196622, 0, 0, 196624, 0, 0, 196626, 0, 0, 196628, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262164, 0, 0, 327680, 0, 0, 327682, 0, 0, 327684, 0, 0, 327686, 0, 0, 327688, 0, 0, 327690, 0, 0, 327692, 0, 0, 327694, 0, 0, 327696, 0, 0, 327698, 0, 0, 327700, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393236, 0, 0, 458752, 0, 0, 458754, 0, 0, 458756, 0, 0, 458758, 0, 0, 458760, 0, 0, 458762, 0, 0, 458764, 0, 0, 458766, 0, 0, 458768, 0, 0, 458770, 0, 0, 458772, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524308, 0, 0, 589824, 0, 0, 589826, 0, 0, 589828, 0, 0, 589830, 0, 0, 589832, 0, 0, 589834, 0, 0, 589836, 0, 0, 589838, 0, 0, 589840, 0, 0, 589842, 0, 0, 589844, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655380, 0, 0, 720896, 0, 0, 720898, 0, 0, 720900, 0, 0, 720902, 0, 0, 720904, 0, 0, 720906, 0, 0, 720908, 0, 0, 720910, 0, 0, 720912, 0, 0, 720914, 0, 0, 720916, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786452, 0, 0, 851968, 0, 0, 851970, 0, 0, 851972, 0, 0, 851974, 0, 0, 851976, 0, 0, 851978, 0, 0, 851980, 0, 0, 851982, 0, 0, 851984, 0, 0, 851986, 0, 0, 851988, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917524, 0, 0, 983040, 0, 0, 983042, 0, 0, 983044, 0, 0, 983046, 0, 0, 983048, 0, 0, 983050, 0, 0, 983052, 0, 0, 983054, 0, 0, 983056, 0, 0, 983058, 0, 0, 983060, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048596, 0, 0, 1114112, 0, 0, 1114114, 0, 0, 1114116, 0, 0, 1114118, 0, 0, 1114120, 0, 0, 1114122, 0, 0, 1114124, 0, 0, 1114126, 0, 0, 1114128, 0, 0, 1114130, 0, 0, 1114132, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179668, 0, 0, 1245184, 0, 0, 1245204, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0 )
add_on_ready = false

[node name="navigation" parent="." instance=ExtResource( 2 )]
visible = false
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 65536, 0, 0, 65542, 0, 0, 65546, 0, 0, 65556, 0, 0, 131072, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131078, 0, 0, 131080, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131090, 0, 0, 131092, 0, 0, 196608, 0, 0, 196612, 0, 0, 196616, 0, 0, 196626, 0, 0, 196628, 0, 0, 262144, 0, 0, 262146, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262164, 0, 0, 327680, 0, 0, 327682, 0, 0, 327684, 0, 0, 327692, 0, 0, 327694, 0, 0, 327698, 0, 0, 327700, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393220, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393236, 0, 0, 458752, 0, 0, 458756, 0, 0, 458758, 0, 0, 458762, 0, 0, 458766, 0, 0, 458768, 0, 0, 458772, 0, 0, 524288, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524302, 0, 0, 524304, 0, 0, 524306, 0, 0, 524308, 0, 0, 589824, 0, 0, 589830, 0, 0, 589834, 0, 0, 589838, 0, 0, 589842, 0, 0, 589844, 0, 0, 655360, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655380, 0, 0, 720896, 0, 0, 720902, 0, 0, 720906, 0, 0, 720910, 0, 0, 720914, 0, 0, 720916, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786446, 0, 0, 786448, 0, 0, 786450, 0, 0, 786452, 0, 0, 851968, 0, 0, 851972, 0, 0, 851980, 0, 0, 851984, 0, 0, 851986, 0, 0, 851988, 0, 0, 917504, 0, 0, 917506, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917522, 0, 0, 917524, 0, 0, 983040, 0, 0, 983042, 0, 0, 983050, 0, 0, 983052, 0, 0, 983058, 0, 0, 983060, 0, 0, 1048576, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048588, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048596, 0, 0, 1114112, 0, 0, 1114114, 0, 0, 1114124, 0, 0, 1114126, 0, 0, 1114132, 0, 0, 1179648, 0, 0, 1179650, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179662, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179668, 0, 0, 1245184, 0, 0, 1245204, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0 )

[node name="shifting_wall_tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="shifting_wall_tween" to="." method="_on_shifting_wall_tween_tween_all_completed"]
